added visualization